# ai-claims-cs

./: .env.example  .gitignore  README.md  app.py  langgraph.json  pyproject.toml
knowledge_base/医疗险/: 医疗险理赔流程.md
knowledge_base/意外险/: 意外险理赔说明.md
knowledge_base/财产险/: 财产险理赔指南.md
knowledge_base/车险/: 车险理赔材料清单.md  车险理赔流程.md
scripts/: build_knowledge_base.py
src/: __init__.py
src/agent/: claims_graph.py  config.py
src/middleware/: guardrails_middleware.py  retry_middleware.py
src/prompts/: claims_agent_prompt.py
src/tools/: knowledge_base_tools.py  link_check_tools.py
